--- a/car.html
+++ b/car.html
@@ -12,50 +12,10 @@ redirect_from:
 
 			<div class="content-wrap nobottompadding" style="padding-top: 1px">
 
-				<!-- Masonry Thums
-				============================================= -->
-				<div class="row m-0 dark clearfix" data-height-xs="500" data-height-sm="500" data-height-md="350" data-height-lg="350" data-height-xl="350">
-					<a href="demos/car/car-single.html" class="col-md-4 image_fade border-right" style="background: url('{{ site.url }}/car/assets/media/categories/1.jpg') no-repeat center center / cover;">
-						<div class="overlay">
-							<div class="text-overlay">
-								<div class="text-overlay-title">
-									<h3>Exteriors Looks</h3>
-								</div>
-								<div class="text-overlay-meta">
-									<span>McLaren 430L &rarr;</span>
-								</div>
-							</div>
-						</div>
-					</a>
-					<a href="demos/car/car-accessories.html" class="col-md-4 image_fade p-0 border-right" style="background: url('{{ site.url }}/car/assets/media/categories/2.jpg') no-repeat center center / cover;">
-						<div class="overlay">
-							<div class="text-overlay">
-								<div class="text-overlay-title">
-									<h3>Interior Looks</h3>
-								</div>
-								<div class="text-overlay-meta">
-									<span>Beautiful Dashing Interiors &rarr;</span>
-								</div>
-							</div>
-						</div>
-					</a>
-					<a href="demos/car/car-contact.html" class="col-md-4 image_fade p-0" style="background: url('{{ site.url }}/car/assets/media/categories/3.jpg') no-repeat center center / cover;">
-						<div class="overlay">
-							<div class="text-overlay">
-								<div class="text-overlay-title">
-									<h3>Our Stores</h3>
-								</div>
-								<div class="text-overlay-meta">
-									<span>find out Stores &rarr;</span>
-								</div>
-							</div>
-						</div>
-					</a>
-				</div>
 
 				<!-- Moving car on scroll
 				============================================= -->
-				<div class="section notopmargin clearfix" style="padding: 100px 0">
+				<!--div class="section notopmargin clearfix" style="padding: 100px 0">
 					<div class="running-car topmargin-sm">
 						<img class="car" src="{{ site.url }}/car/assets/media/moving-car/car.jpg" alt="">
 						<img class="wheel" src="{{ site.url }}/car/assets/media/moving-car/car-tier.png" alt="">
@@ -74,7 +34,7 @@ redirect_from:
 
 				<!-- Features Section
 				============================================= -->
-				<div class="container clearfix">
+				<!--div class="container clearfix">
 
 					<div class="row clearfix topmargin bottommargin">
 
@@ -682,108 +642,11 @@ redirect_from:
 					</div>
 				</div>
 
-				<!-- 360 degree car
-				============================================= -->
-				<div class="section dark nobottommargin clearfix" style="background: #FFF url('{{ site.url }}/car/assets/media/1.jpg') right bottom no-repeat; background-size: cover; padding: 80px 0 40px">
-					<div class="container-fluid clearfix" style="position: relative; z-index: 2;">
-						<div class="row clearfix">
-							<div class="col-lg-8">
-								<div class="heading-block noborder nobottommargin center">
-									<h3 style="font-size: 32px; text-transform: ;  font-weight: 700;">360 Degree Drag</h3>
-								</div>
-								<!-- 360 degree Car Content -->
-								<div class="threesixty 360-car">
-									<div class="spinner">
-										<span>0%</span>
-									</div>
-									<ol class="threesixty_images"></ol>
-								</div>
 
-							</div>
-							<div class="col-lg-4">
-								<div class="row clearfix">
-									<div class="col-lg-10">
-										<div class="heading-block topmargin-sm noborder">
-											<h3 style="text-transform: none; font-size: 36px; letter-spacing: 0px; font-weight: 700;">Select other Models</h3>
-											<span>Intrinsicly formulate plug-and-play systems with interactive communities. Quickly aggregate plug-and-play.</span>
-										</div>
-										<form id="login-form" name="login-form" class="nobottommargin" action="#" method="post">
-
-											<div class="col_full">
-												<select class="selectpicker sm-form-control customjs border-form-control" title="Select Brand" data-live-search="true" data-size="6" style="width:100%;">
-													<option value="AUDI">Audi</option>
-													<option value="BMW All Series">BMW All Series</option>
-													<option value="HONDA">Honda</option>
-													<option value="MERCEDES-BENZ">MERCEDES-BENZ</option>
-													<option value="HONDA">Manza</option>
-													<option value="MERCEDES-BENZ">Huyndai</option>
-												</select>
-											</div>
-
-											<div class="col_full">
-												<select class="selectpicker sm-form-control customjs border-form-control" data-size="6" data-live-search="true" title="Select Model" style="width:100%; line-height: 30px;">
-													<optgroup label="AUDI">
-														<option value="R8">Audi R8</option>
-														<option value="TT">Audi TT</option>
-														<option value="S5">Audi S5</option>
-														<option value="A5">Audi A5</option>
-														<option value="TTS">Audi TTS</option>
-														<option value="RS5">Audi RS 5</option>
-													</optgroup>
-													<optgroup label="BMW All Series">
-														<option value="1-Series">BMW 1 Series 5-Door</option>
-														<option value="Series-ActiveE">BMW 1 Series ActiveE</option>
-														<option value="3-Series-Sedan">BMW 3 Series Sedan</option>
-														<option value="ActiveHybrid-3">BMW ActiveHybrid 3</option>
-														<option value="5-Series-Sedan">BMW 5 Series Sedan</option>
-														<option value="ActiveHybrid-5">BMW ActiveHybrid 5</option>
-														<option value="7-Series">BMW 7 Series</option>
-														<option value="ActiveHybrid-7">BMW ActiveHybrid 7</option>
-														<option value="M3-Sedan">BMW M3 Sedan</option>
-														<option value="M5-Sedan">BMW M5 Sedan</option>
-														<option value="3-Series-Turismo">BMW 3 Series Gran Turismo</option>
-														<option value="5=Series-Turismo">BMW 5 Series Gran Turismo</option>
-													</optgroup>
-													<optgroup label="HONDA">
-														<option value="Fit">Honda Fit</option>
-														<option value="City">Honda City</option>
-														<option value="Civic">Honda Civic</option>
-														<option value="Fit-EV1">Honda Fit EV1</option>
-														<option value="Accord">Honda Accord</option>
-														<option value="Crosstour">Honda Crosstour</option>
-														<option value="FCX-Clarity">Honda FCX Clarity</option>
-														<option value="Civic-Hybrid">Honda Civic Hybrid</option>
-														<option value="Accord-Hybrid">Honda Accord Hybrid</option>
-														<option value="Accord-Plug-In">Honda Accord Plug-In</option>
-													</optgroup>
-													<optgroup label="MERCEDES-BENZ">
-														<option value="S-Class">2015 Mercedes-Benz S-Class Sedan</option>
-														<option value="C-Class">2015 Mercedes-Benz C-Class Sedan</option>
-														<option value="E-Class">2015 Mercedes-Benz E-Class Sedan</option>
-														<option value="E-Class-Hybrid">2015 Mercedes-Benz E-Class Hybrid</option>
-														<option value="Maybach-S600">2016 Mercedes-Benz Maybach S600</option>
-														<option value="B-Class-Electric-Drive">2015 Mercedes-Benz B-Class Electric Drive</option>
-													</optgroup>
-												</select>
-											</div>
-
-											<div class="col_full nobottommargin">
-												<button class="button button-rounded btn-block t400 nomargin" id="login-form-submit" name="login-form-submit" value="login">Search</button>
-											</div>
-
-										</form>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="video-wrap d-block d-md-block d-lg-none" style="z-index: 0;">
-						<div class="video-overlay" style="background: rgba(255,255,255,0.8);"></div>
-					</div>
-				</div> <!-- 360 Degree Section End -->
 
 				<!-- 360 degree car
 				============================================= -->
+
 				<div class="section nomargin nobg clearfix" style="padding: 100px 0;">
 					<div class="container clearfix">
 						<div class="heading-block center">
@@ -1033,6 +896,106 @@ redirect_from:
 					</div>
 				</div> <!-- Video Gallery end -->
 
+				<!-- 360 degree car
+				============================================= -->
+				<div class="section dark nobottommargin clearfix" style="background: #FFF url('{{ site.url }}/car/assets/media/1.jpg') right bottom no-repeat; background-size: cover; padding: 80px 0 40px">
+					<div class="container-fluid clearfix" style="position: relative; z-index: 2;">
+						<div class="row clearfix">
+							<div class="col-lg-8">
+								<div class="heading-block noborder nobottommargin center">
+									<h3 style="font-size: 32px; text-transform: ;  font-weight: 700;">360 Degree Drag</h3>
+								</div>
+								<!-- 360 degree Car Content -->
+								<div class="threesixty 360-car">
+									<div class="spinner">
+										<span>0%</span>
+									</div>
+									<ol class="threesixty_images"></ol>
+								</div>
+
+							</div>
+							<div class="col-lg-4">
+								<div class="row clearfix">
+									<div class="col-lg-10">
+										<div class="heading-block topmargin-sm noborder">
+											<h3 style="text-transform: none; font-size: 36px; letter-spacing: 0px; font-weight: 700;">Select other Models</h3>
+											<span>Intrinsicly formulate plug-and-play systems with interactive communities. Quickly aggregate plug-and-play.</span>
+										</div>
+										<form id="login-form" name="login-form" class="nobottommargin" action="#" method="post">
+
+											<div class="col_full">
+												<select class="selectpicker sm-form-control customjs border-form-control" title="Select Brand" data-live-search="true" data-size="6" style="width:100%;">
+													<option value="AUDI">Audi</option>
+													<option value="BMW All Series">BMW All Series</option>
+													<option value="HONDA">Honda</option>
+													<option value="MERCEDES-BENZ">MERCEDES-BENZ</option>
+													<option value="HONDA">Manza</option>
+													<option value="MERCEDES-BENZ">Huyndai</option>
+												</select>
+											</div>
+
+											<div class="col_full">
+												<select class="selectpicker sm-form-control customjs border-form-control" data-size="6" data-live-search="true" title="Select Model" style="width:100%; line-height: 30px;">
+													<optgroup label="AUDI">
+														<option value="R8">Audi R8</option>
+														<option value="TT">Audi TT</option>
+														<option value="S5">Audi S5</option>
+														<option value="A5">Audi A5</option>
+														<option value="TTS">Audi TTS</option>
+														<option value="RS5">Audi RS 5</option>
+													</optgroup>
+													<optgroup label="BMW All Series">
+														<option value="1-Series">BMW 1 Series 5-Door</option>
+														<option value="Series-ActiveE">BMW 1 Series ActiveE</option>
+														<option value="3-Series-Sedan">BMW 3 Series Sedan</option>
+														<option value="ActiveHybrid-3">BMW ActiveHybrid 3</option>
+														<option value="5-Series-Sedan">BMW 5 Series Sedan</option>
+														<option value="ActiveHybrid-5">BMW ActiveHybrid 5</option>
+														<option value="7-Series">BMW 7 Series</option>
+														<option value="ActiveHybrid-7">BMW ActiveHybrid 7</option>
+														<option value="M3-Sedan">BMW M3 Sedan</option>
+														<option value="M5-Sedan">BMW M5 Sedan</option>
+														<option value="3-Series-Turismo">BMW 3 Series Gran Turismo</option>
+														<option value="5=Series-Turismo">BMW 5 Series Gran Turismo</option>
+													</optgroup>
+													<optgroup label="HONDA">
+														<option value="Fit">Honda Fit</option>
+														<option value="City">Honda City</option>
+														<option value="Civic">Honda Civic</option>
+														<option value="Fit-EV1">Honda Fit EV1</option>
+														<option value="Accord">Honda Accord</option>
+														<option value="Crosstour">Honda Crosstour</option>
+														<option value="FCX-Clarity">Honda FCX Clarity</option>
+														<option value="Civic-Hybrid">Honda Civic Hybrid</option>
+														<option value="Accord-Hybrid">Honda Accord Hybrid</option>
+														<option value="Accord-Plug-In">Honda Accord Plug-In</option>
+													</optgroup>
+													<optgroup label="MERCEDES-BENZ">
+														<option value="S-Class">2015 Mercedes-Benz S-Class Sedan</option>
+														<option value="C-Class">2015 Mercedes-Benz C-Class Sedan</option>
+														<option value="E-Class">2015 Mercedes-Benz E-Class Sedan</option>
+														<option value="E-Class-Hybrid">2015 Mercedes-Benz E-Class Hybrid</option>
+														<option value="Maybach-S600">2016 Mercedes-Benz Maybach S600</option>
+														<option value="B-Class-Electric-Drive">2015 Mercedes-Benz B-Class Electric Drive</option>
+													</optgroup>
+												</select>
+											</div>
+
+											<div class="col_full nobottommargin">
+												<button class="button button-rounded btn-block t400 nomargin" id="login-form-submit" name="login-form-submit" value="login">Search</button>
+											</div>
+
+										</form>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="video-wrap d-block d-md-block d-lg-none" style="z-index: 0;">
+						<div class="video-overlay" style="background: rgba(255,255,255,0.8);"></div>
+					</div>
+				</div> <!-- 360 Degree Section End -->
+
 				<!-- Counter Area
 				============================================= -->
 				<div class="section counter-section nomargin dark clearfix">
@@ -1075,7 +1038,7 @@ redirect_from:
 
 				<!-- Featured Section
 				============================================= -->
-				<div class="section nomargin clearfix" style="background: #FFF url('{{ site.url }}/car/assets/media/features/section-bg.jpg') left bottom no-repeat; background-size: cover; padding: 140px 0">
+				<!--div class="section nomargin clearfix" style="background: #FFF url('{{ site.url }}/car/assets/media/features/section-bg.jpg') left bottom no-repeat; background-size: cover; padding: 140px 0">
 					<div class="container clearfix">
 						<div class="row clearfix">
 							<div class="col-lg-6 col-md-9">
@@ -1113,6 +1076,47 @@ redirect_from:
 						</div>
 					</div>
 				</div> <!-- Featured end -->
+
+				<!-- Masonry Thums
+				============================================= -->
+				<div class="row m-0 dark clearfix" data-height-xs="500" data-height-sm="500" data-height-md="350" data-height-lg="350" data-height-xl="350">
+					<a href="demos/car/car-single.html" class="col-md-4 image_fade border-right" style="background: url('{{ site.url }}/car/assets/media/categories/1.jpg') no-repeat center center / cover;">
+						<div class="overlay">
+							<div class="text-overlay">
+								<div class="text-overlay-title">
+									<h3>Exteriors Looks</h3>
+								</div>
+								<div class="text-overlay-meta">
+									<span>McLaren 430L &rarr;</span>
+								</div>
+							</div>
+						</div>
+					</a>
+					<a href="demos/car/car-accessories.html" class="col-md-4 image_fade p-0 border-right" style="background: url('{{ site.url }}/car/assets/media/categories/2.jpg') no-repeat center center / cover;">
+						<div class="overlay">
+							<div class="text-overlay">
+								<div class="text-overlay-title">
+									<h3>Interior Looks</h3>
+								</div>
+								<div class="text-overlay-meta">
+									<span>Beautiful Dashing Interiors &rarr;</span>
+								</div>
+							</div>
+						</div>
+					</a>
+					<a href="demos/car/car-contact.html" class="col-md-4 image_fade p-0" style="background: url('{{ site.url }}/car/assets/media/categories/3.jpg') no-repeat center center / cover;">
+						<div class="overlay">
+							<div class="text-overlay">
+								<div class="text-overlay-title">
+									<h3>Our Stores</h3>
+								</div>
+								<div class="text-overlay-meta">
+									<span>find out Stores &rarr;</span>
+								</div>
+							</div>
+						</div>
+					</a>
+				</div>
 
 				<!-- Buy And Sell Section
 				============================================= -->
