--- a/_pages/car/vios.html
+++ b/_pages/car/vios.html
@@ -23,9 +23,9 @@ sitemap: true
 							<!-- Page Section - features
 							============================================= -->
 							<div id="section-features" class="page-section">
-							<h3 class="mb-3">Đánh giá xe Vios 2019 - Sành điệu mọi góc nhìn</h3>
+							<h3 class="mb-3">ĐÁNH GIÁ XE VIOS 2019 - SÀNH ĐIỆU MỌI GÓC NHÌN</h3>
 								<p>Giá xe Vios 2019 lăn bánh hôm nay là bao nhiêu? Xe Vios 2019 All New khuyến mãi tháng 02/2019 là bao nhiêu? Toyota Vios 2019 có gì mới hay Mua xe Vios trả góp ở đâu? … là những câu hỏi mà chúng tôi sẽ trả lời khách hàng qua bài viết dưới đây? Quý khách có thể liên hệ ngay với chúng tôi đế được tư vấn tốt nhất và nhận giá xe Vios 2019 rẻ nhất cùng khuyến mãi xe Toyota Vios 2019 tốt nhất trong tháng.<br>
-								Toyota Vios mới 2019 với thiết kế và sự nâng cấp đáng kể làm cho diện mạo cũng như các tính năng của nó đã khác biệt hơn hẳn, kiểu dáng trẻ trung với động cơ được trang bị công nghệ mới , hộp số vô cấp CVT 7 cấp ảo cho chuyển động vô cùng êm ái và tiết kiệm nhiên liệu tối ưu cùng hệ thống an toàn tuyệt đối bao gồm: 7 túi khí, khỗ trợ khởi hành ngang dốc, cân bằng điện tử, cảm biến lùi, chống bó cứng phanh...mà không một đối thủ nào cùng phân khúc có thể so sánh nổi. Vios 2019 hoàn toàn đặc biệt và đột phá so với các đối thủ khác, bạn có thể băn khoăn vì chưa biết nên chọn mua sản phẩm xe hơi nào, bạn không biết bản thân mình cần làm gì thì mới lựa chọn được chiếc xe tốt? , rất đơn giản chỉ với Toyota vios mới 2019 mọi thứ sẽ làm bạn ngạc nhiên cho mà xem..!</p>
+								Vios 2019 hoàn toàn đặc biệt và đột phá so với các đối thủ khác, bạn có thể băn khoăn vì chưa biết nên chọn mua sản phẩm xe hơi nào, bạn không biết bản thân mình cần làm gì thì mới lựa chọn được chiếc xe tốt? Rất đơn giản chỉ với Toyota vios mới 2019 mọi thứ sẽ làm bạn ngạc nhiên cho mà xem..!</p>
 								<div class="row clearfix">
 									<div class="col-md-6">
 										<ul class="iconlist">
@@ -49,8 +49,8 @@ sitemap: true
 							<!-- Page Section - spec
 							============================================= -->
 							<div id="section-spec" class="page-section mt-5">
-								<h3 class="mb-3">Technical Specs</h3>
-								<p>From March 2017, a total of five variants will be available in Germany: the 911 Carrera GTS with rear-wheel drive, the 911 Carrera 4 GTS with all-wheel drive – both of the above available as a Coupé and Cabriolet – and the 911 Targa 4 GTS with all-wheel drive.</p>
+								<h3 class="mb-3">THÔNG SỐ KỸ THUẬT</h3>
+								<p>Toyota Vios mới 2019 với thiết kế và sự nâng cấp đáng kể làm cho diện mạo cũng như các tính năng của nó đã khác biệt hơn hẳn, kiểu dáng trẻ trung với động cơ được trang bị công nghệ mới , hộp số vô cấp CVT 7 cấp ảo cho chuyển động vô cùng êm ái và tiết kiệm nhiên liệu tối ưu cùng hệ thống an toàn tuyệt đối bao gồm: 7 túi khí, khỗ trợ khởi hành ngang dốc, cân bằng điện tử, cảm biến lùi, chống bó cứng phanh...mà không một đối thủ nào cùng phân khúc có thể so sánh nổi.</p>
 								<div class="row">
 									<div class="col-lg-6 mt-3">
 										<table class="table">
