--- a/_pages/car/vios.html
+++ b/_pages/car/vios.html
@@ -46,6 +46,38 @@ sitemap: true
 								</div>
 							</div>
 
+							<!-- Page Section - price
+							============================================= -->
+							<div id="section-price" class="page-section mt-5">
+								<h3 class="mb-3">BẢNG GIÁ TOYOTA VIOS 2019</h3>
+								<table class="table table-striped">
+									<thead>
+										<tr>
+											<th scope="col">PHIÊN BẢN</th>
+											<th scope="col">ĐỊA ĐIỂM</th>
+											<th scope="col">GIÁ NIÊM YẾT</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td><a href="#">VIOS 1.5E (MT)</a><br><small>Số Sàn</small></td>
+											<td style="vertical-align: middle">Toàn quốc</td>
+											<td style="vertical-align: middle" class="t600">531.000.000đ</td>
+										</tr>
+										<tr>
+											<td><a href="#">Vios 1.5E (CVT)</a><br><small>Số Tự Động</small></td>
+											<td style="vertical-align: middle">Toàn quốc</td>
+											<td style="vertical-align: middle" class="t600">569.000.000đ</td>
+										</tr>
+										<tr>
+											<td><a href="#">Vios 1.5G (CVT)</a><br><small>Số Tự Động</small></td>
+											<td style="vertical-align: middle">Toàn quốc</td>
+											<td style="vertical-align: middle" class="t600">606.000.000đ</td>
+										</tr>
+									 </tbody>
+								</table>
+							</div>
+
 							<!-- Page Section - spec
 							============================================= -->
 							<div id="section-spec" class="page-section mt-5">
@@ -182,38 +214,6 @@ sitemap: true
 										<a href="#" class="button button-rounded button-dark nomargin fright nott">View all Specs <i class="icon-line-arrow-right"></i></a>
 									</div>
 								</div>
-							</div>
-
-							<!-- Page Section - gallery
-							============================================= -->
-							<div id="section-price" class="page-section mt-5">
-								<h3 class="mb-3">BẢNG GIÁ TOYOTA VIOS 2019</h3>
-								<table class="table table-striped">
-									<thead>
-										<tr>
-											<th scope="col">PHIÊN BẢN</th>
-											<th scope="col">ĐỊA ĐIỂM</th>
-											<th scope="col">GIÁ NIÊM YẾT</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr>
-											<td><a href="#">VIOS 1.5E (MT)</a><br><small>Số Sàn</small></td>
-											<td style="vertical-align: middle">Toàn quốc</td>
-											<td style="vertical-align: middle" class="t600">531.000.000đ</td>
-										</tr>
-										<tr>
-											<td><a href="#">Vios 1.5E (CVT)</a><br><small>Số Tự Động</small></td>
-											<td style="vertical-align: middle">Toàn quốc</td>
-											<td style="vertical-align: middle" class="t600">569.000.000đ</td>
-										</tr>
-										<tr>
-											<td><a href="#">Vios 1.5G (CVT)</a><br><small>Số Tự Động</small></td>
-											<td style="vertical-align: middle">Toàn quốc</td>
-											<td style="vertical-align: middle" class="t600">606.000.000đ</td>
-										</tr>
-									 </tbody>
-								</table>
 							</div>
 
 							<!-- Page Section - gallery
